@@ -3,17 +3,17 @@
 \alias{getSummary.expcoef}
 \alias{getSummary.lm}
 \alias{getSummary.glm}
+\alias{getSummary.clm}
 \alias{getSummary.polr}
 \alias{getSummary.simex}
-\alias{getSummary.lmer}
-\alias{getSummary.mer}
+\alias{getSummary.expcoef}
 \alias{getSummary.expcoef.glm}
-\alias{getSummary.clm}
-\alias{getSummary.coxph}
-\alias{getSummary.survreg}
 \alias{getSummary.aftreg}
+\alias{getSummary.coxph}
 \alias{getSummary.phreg}
+\alias{getSummary.survreg}
 \alias{getSummary.weibreg}
+\alias{getSummary.mer}
 \alias{getSummary.ivreg}
 \alias{getSummary.tobit}
 \alias{getSummary.hurdle}
@@ -21,38 +21,49 @@
 \alias{getSummary.betareg}
 \alias{getSummary.multinom}
 
+
 \title{Get Model Summaries for Use with "mtable"}
 \description{A generic function and methods to collect coefficients
   and summary statistics from a model object. It is used in \code{\link{mtable}}
   }
 \usage{
+  
   \method{getSummary}{lm}(obj, alpha=.05,\dots)
   \method{getSummary}{glm}(obj, alpha=.05,\dots)
+
+  # These are contributed by Christopher N. Lawrence
+  \method{getSummary}{clm}(obj, alpha=.05,\dots)
   \method{getSummary}{polr}(obj, alpha=.05,\dots)
   \method{getSummary}{simex}(obj, alpha=.05,\dots)
-  \method{getSummary}{mer}(obj, alpha=.05,\dots)
-  \method{getSummary}{clm}(obj, alpha=.05,\dots)
-  \method{getSummary}{coxph}(obj, alpha=.05,\dots)
-  \method{getSummary}{survreg}(obj, alpha=.05,\dots)
+
+  # These are contributed by Jason W. Morgan
   \method{getSummary}{aftreg}(obj, alpha=.05,\dots)
+  \method{getSummary}{coxph}(obj, alpha=.05,\dots)
   \method{getSummary}{phreg}(obj, alpha=.05,\dots)
+  \method{getSummary}{survreg}(obj, alpha=.05,\dots)
   \method{getSummary}{weibreg}(obj, alpha=.05,\dots)
+  \method{getSummary}{mer}(obj, alpha=.05, varPar.as.coef = TRUE, \dots)
+
+  # These are contributed by Achim Zeileis
   \method{getSummary}{ivreg}(obj, alpha=.05,\dots)
   \method{getSummary}{tobit}(obj, alpha=.05,\dots)
   \method{getSummary}{hurdle}(obj, alpha=.05,\dots)
   \method{getSummary}{zeroinfl}(obj, alpha=.05,\dots)
   \method{getSummary}{betareg}(obj, alpha=.05,\dots)
   \method{getSummary}{multinom}(obj, alpha=.05,\dots)
-    
-
+  
+  # These are contributed by Dave Atkins
   # Method for 'glm' objects - to report
   # exponentiated coefficients.
+  \method{getSummary}{expcoef}(obj, alpha=.05,\dots)
   \method{getSummary.expcoef}{glm}(obj, alpha=.05,\dots)
 }
 \arguments{
   \item{obj}{a model object, e.g. of class \code{lm} or \code{glm}}
   \item{alpha}{level of the confidence intervals; their coverage should
     be 1-alpha/2 }
+  \item{varPar.as.coef}{logical; should variance parameters included into the
+    table of coefficients?}
   \item{\dots}{further arguments; ignored.}
 }
 \details{
@@ -94,12 +105,7 @@
   \item{sumstat}{a vector containing the model summary statistics;
     the components may have arbitrary names.}
 }
-\note{
-  \code{getSummary.polr} and \code{getSummary.simex} are contributions
-  from Christopher N. Lawrence (Texas A&M International University).
-  \code{getSummary.lmer} and \code{getSummary.expcoef.glm} are contributions
-  from Dave Atkins (Unversity of Washington).
-}
+
 
 \keyword{misc}
 \keyword{utilities}
